# turtlebot3_autorace

turtlebot3_autorace_camera/: CMakeLists.txt  nodelet_plugins.xml  package.xml
turtlebot3_autorace_camera/calibration/extrinsic_calibration/: projection.yaml  projection.yaml.fisheye  projection.yaml.gazebo
turtlebot3_autorace_camera/calibration/intrinsic_calibration/: C920_cam_320x240.yaml  ELP_cam_320x240.yaml  quickcam_320x240.yaml  usb_cam_320_240_30fps.yaml
turtlebot3_autorace_camera/cfg/: ImageProjectionParams.cfg
turtlebot3_autorace_camera/launch/: turtlebot3_autorace_extrinsic_camera_calibration_nodelet.launch  turtlebot3_autorace_image_processing.launch  turtlebot3_autorace_intrinsic_camera_calibration_usbcam.launch
turtlebot3_autorace_camera/launch/includes/: compensation.launch.xml  detect_lane.launch.xml  lane_detection.launch.xml  processing.launch.xml  projection.launch.xml  rgb.launch.xml
turtlebot3_autorace_camera/nodes/: image_compensation  image_projection
turtlebot3_autorace_camera/src/node/: image_compensation_node.cpp  image_projection_node.cpp
turtlebot3_autorace_camera/src/nodelet/: compensation_nodelet.cpp  projection_nodelet.cpp
turtlebot3_autorace_control/nodes/: control_lane
turtlebot3_autorace_detect/: CMakeLists.txt  nodelet_plugins.xml  package.xml
turtlebot3_autorace_detect/cfg/: DetectCalibrationParams.cfg  DetectLaneParams.cfg
turtlebot3_autorace_detect/include/: polyfit_queue.hpp
turtlebot3_autorace_detect/launch/: turtlebot3_autorace_detect_calibration.launch  turtlebot3_autorace_detect_lane_nodelet.launch
turtlebot3_autorace_detect/nodes/: detect_calibration
turtlebot3_autorace_detect/param/lane/: lane.yaml
turtlebot3_autorace_detect/src/node/: detect_lane_node.cpp
turtlebot3_autorace_detect/src/nodelet/: detect_lane_nodelet.cpp  detect_lane_nodelet_rev.cpp
